Password: added visibility toggle, forgot and reset password functionality